# project-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  DOCUMENTATION.md  README.md  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py  __main__.py  settings.py
